Improve performance, eliminate ConcurrentModificationException and eliminate stucks (#558)